--- a/src/components/entrepreneur/Entrepreneur.css
+++ b/src/components/entrepreneur/Entrepreneur.css
@@ -17,7 +17,7 @@ body{
     border-radius: 20px;
     border: 5px solid white;
     box-shadow: 0px 10px 15px rgba(0.5,0,0,0.5);
-    background-image: url("img-1.jpg");
+    background-image: url("enterpreimg-2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 70vh;
